# DbWeakCheck

./: .gitignore  LICENSE  README.md  pyproject.toml
src/dbweakcheck/: cli.py
tests/: test_cli.py
